--- a/SHS-014-V/Src/All Study.fx.yaml
+++ b/SHS-014-V/Src/All Study.fx.yaml
@@ -183,3 +183,32 @@
             Text: ="No Matching Items Found"
             ZIndex: =2
 
+    notfound_study_1 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =537
+        LayoutAlignItems: =LayoutAlignItems.Center
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.Center
+        LayoutMode: =LayoutMode.Auto
+        Visible: =If(Gallery_study.AllItemsCount=0,true,false)
+        Width: =App.Width-CompAllstudy.VarMenuWidth
+        X: =CompAllstudy.VarMenuWidth
+        Y: =231
+        ZIndex: =4
+
+        Image8_18 As image:
+            Height: =200
+            Image: ='Not found'
+            Width: =200
+            ZIndex: =1
+
+        Label19_18 As label:
+            Align: =Align.Center
+            AlignInContainer: =AlignInContainer.Stretch
+            Color: =RGBA(255, 0, 0, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =80
+            Size: =17
+            Text: ="No Matching Items Found"
+            ZIndex: =2
+
