--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -724,13 +724,7 @@
                             Fill: =RGBA(5, 89, 8, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
-                                ForAll(
-                                    Filter(Gallery_study_5.AllItems,Checkbox2_7.Value=true),
-                                    Collect(ValueofIdS,ThisRecord.ID)
-                                );
-                                
-                                //ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1")
+                                =UpdateContext({Sendforapproval:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -1936,4 +1930,131 @@
             X: =546
             Y: =630
             ZIndex: =3
+
+    Container53_1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(40, 134, 222, 0.15)
+        Height: =App.Height-compForAdminAction.ComHeaderHeight
+        Visible: =Sendforapproval
+        Width: =App.Width-compForAdminAction.VarMenuWidth
+        X: =compForAdminAction.VarMenuWidth
+        Y: =compForAdminAction.ComHeaderHeight
+        ZIndex: =6
+
+        "'Send for Approval_popup_2' As groupContainer.manualLayoutContainer":
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =389
+            Visible: =Sendforapproval
+            Width: =Parent.Width-500
+            X: =222
+            Y: =99
+            ZIndex: =1
+
+            Label33_1 As label:
+                Align: =Align.Center
+                FontWeight: =FontWeight.Semibold
+                Height: =54
+                Text: ="Are Sure you sure you want"""&Gallery_study_4.Selected.Study &""" to Send For Approval?"
+                Width: =Parent.Width
+                Y: =24
+                ZIndex: =1
+
+            TextInput1_8 As text:
+                Default: ="Text input"
+                Height: =118
+                Width: =Parent.Width-50
+                X: =20
+                Y: =96
+                ZIndex: =2
+
+            Button6_2 As button:
+                OnSelect: |-
+                    =UpdateContext({Sendforapprovaladmin:false})
+                Text: ="Cancel"
+                Width: =142
+                X: =435
+                Y: =300
+                ZIndex: =3
+
+            Button6_3 As button:
+                OnSelect: |-
+                    =
+                    Clear(ValueofId);
+                    ForAll(
+                        Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
+                        Collect(ValueofId,ThisRecord.ID)
+                    );
+                    ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Approval1",Gallery_study_3.Selected.DivisionWithStudyId,TextInput1_8.Text);
+                    UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for Approval Process successfully",NotificationType.Success)
+                Text: ="Confirm"
+                Width: =142
+                X: =624
+                Y: =300
+                ZIndex: =4
+
+    RejectPopup_2 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(152, 208, 70, 1)
+        Height: =557
+        Visible: =rejectpopup
+        Width: =1063
+        X: =303
+        Y: =123
+        ZIndex: =7
+
+        Label37_4 As label:
+            FontWeight: =FontWeight.Bold
+            Height: =77
+            Size: =20
+            Text: ="Confirm Submission"
+            Width: =412
+            X: =4
+            Y: =18
+            ZIndex: =1
+
+        Label38_4 As label:
+            Height: =80
+            Size: =20
+            Text: ="Are you sure you want to reject the initiatives of '"&Gallery_study_3.Selected.Study&"'?"
+            Width: =869
+            X: =44
+            Y: =95
+            ZIndex: =2
+
+        Button5_9 As button:
+            DisplayMode: =If(TextInput3_4.Text="",DisplayMode.Disabled,DisplayMode.Edit)
+            Height: =57
+            OnSelect: |-
+                =
+                Clear(ValueofId);
+                ForAll(
+                    Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
+                    Collect(ValueofId,ThisRecord.ID)
+                );
+                ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Rejected",Gallery_study_3.Selected.ID,TextInput3_4.Text);
+                UpdateContext({Sendforapprovaladmin:false}); Notify("The Initiative is Rejected successfully",NotificationType.Success)
+            Text: ="Confirm"
+            Width: =210
+            X: =832
+            Y: =462
+            ZIndex: =4
+
+        Button5_8 As button:
+            Fill: =RGBA(255, 191, 0, 1)
+            Height: =57
+            OnSelect: |-
+                =UpdateContext({rejectpopup:false})
+            Text: ="Cancel"
+            Width: =210
+            X: =519
+            Y: =462
+            ZIndex: =5
+
+        TextInput3_4 As text:
+            Default: =""
+            Height: =235
+            HintText: ="Add Comments "
+            Size: =18
+            Width: =725
+            X: =56
+            Y: =175
+            ZIndex: =6
 
