--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1964,7 +1964,7 @@
                         Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
                         Collect(ValueofId,ThisRecord.ID)
                     );
-                    ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Approval1",Gallery_study_3.Selected.DivisionWithStudyId,TextInput1.Text);
+                    ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Approval1",Gallery_study_3.Selected.ID,TextInput3_3.Text);
                     UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for Approval Process successfully",NotificationType.Success)
                 Text: ="Confirm"
                 Width: =142
